--- a/force-app/main/default/classes/CommunityFacadeRemote.cls
+++ b/force-app/main/default/classes/CommunityFacadeRemote.cls
@@ -32,6 +32,7 @@ public without sharing class CommunityFacadeRemote {
         Boolean isTCAccepted;
         String language;
         List<String> preventedCookies;
+        Boolean showPastStudies;
         List<CommunityModeService.CommunityMode> allUserModes;
         CommunityModeService.CommunityMode currentUserMode;
     }
@@ -62,6 +63,7 @@ public without sharing class CommunityFacadeRemote {
             cd.language = UserInfo.getLanguage();
             cd.preventedCookies = getPreventedCookies(userContact.Id);
             cd.isDelegate = userContact.UserCommunityIsDelegate__c;
+            cd.showPastStudies = ContactService.getPastStudyWrappers(userContact.Id).size() > 0;
             
             return JSON.serialize(cd);
         } catch (Exception e) {
