--- a/force-app/main/default/classes/StudyResourceVisibilityService.cls
+++ b/force-app/main/default/classes/StudyResourceVisibilityService.cls
@@ -33,7 +33,7 @@ public without sharing class StudyResourceVisibilityService {
 
         //Add IRB logic here
 
-        return true; 
+        return isVisible;
     }
 
 }
