--- a/force-app/main/default/classes/MyTeamRemote.cls
+++ b/force-app/main/default/classes/MyTeamRemote.cls
@@ -294,10 +294,10 @@ public without sharing class MyTeamRemote {
                 if (hasDelegateLevels/*&& delegateContact != null && !delegateContact.HasOptedOutOfEmail*/) {
                     sendEmailNotification(dw.delegateContact);
                 }
-                User delegateUser = [SELECT Id, IsActive FROM User WHERE ContactId = :dw.delegateContact.Id LIMIT 1];
+                List<User> delegateUsers = CommunityService.getCommunityUsersByContactIds(new Set<Id>{dw.delegateContact.Id});
 
-                if(!delegateUser.IsActive){
-                    DelegateService.activateDelegateUsers(new Set<Id>{ delegateUser.Id});
+                if(!delegateUsers.isEmpty() && !delegateUsers[0].IsActive){
+                    DelegateService.activateDelegateUsers(new Set<Id>{ delegateUsers[0].Id});
                 }
             }
         } catch (Exception e) {
