--- a/force-app/main/default/classes/DatabaseService.cls
+++ b/force-app/main/default/classes/DatabaseService.cls
@@ -2,7 +2,7 @@
  * Created by Leonid Bartenev
  */
 
-public class DatabaseService {
+public without sharing class DatabaseService {
 
     private static DatabaseService instance;
 
