--- a/force-app/main/default/classes/CommunityFacadeRemote.cls
+++ b/force-app/main/default/classes/CommunityFacadeRemote.cls
@@ -52,6 +52,10 @@ public without sharing class CommunityFacadeRemote {
     public static String getCommunityData() {
         try {
             Contact userContact = CommunityService.getUserContact();
+            if(userContact.userCommunityMode__c == CommunityService.USER_MODE_PARTICIPANT &&
+                    userContact.Current_Participant_Enrollment__c == null) {
+                ContactService.updateCurrentPEOnContacts(new List<Id>{userContact.Id});
+            }
             CommunityData cd = new CommunityData();
             cd.allUserModes = CommunityModeService.getUserCommunityModes();
             cd.currentUserMode = CommunityModeService.getCurrentCommunityMode(cd.allUserModes);
