--- a/force-app/main/default/classes/RRPDFViewerController.cls
+++ b/force-app/main/default/classes/RRPDFViewerController.cls
@@ -11,14 +11,30 @@ public with sharing class RRPDFViewerController {
     public void initData() {
 
         Map<String, String> parameters = ApexPages.currentPage().getParameters();
-        String resourceId = parameters.get('resourceId');
-        String language = parameters.get('language');
-        ContentDocumentLinkService contentDocumentLinkService = (ContentDocumentLinkService) ClassFactory.newInstance(ContentDocumentLinkService.class);
-        ContentDocumentLink cdl = contentDocumentLinkService.getCDLForResource(resourceId, language);
-        if (cdl != null) {
-            this.fileName = [SELECT Id, Title__c FROM Resource__c WHERE Id =  :resourceId].Title__c;
-            this.pdfBlobDataInBase64StringFormat = EncodingUtil.base64Encode(cdl.ContentDocument.LatestPublishedVersion.VersionData);
-            this.executeJS = true;
+        String documentId = parameters.get('documentId');
+        ContentDocumentLink cdl;
+        if(String.isEmpty(documentId)) {
+            String resourceId = parameters.get('resourceId');
+            String language = parameters.get('language');
+            ContentDocumentLinkService contentDocumentLinkService = (ContentDocumentLinkService) ClassFactory.newInstance(ContentDocumentLinkService.class);
+            cdl = contentDocumentLinkService.getCDLForResource(resourceId, language);
+            if (cdl != null) {
+                this.fileName = [SELECT Id, Title__c FROM Resource__c WHERE Id = :resourceId].Title__c;
+                this.pdfBlobDataInBase64StringFormat = EncodingUtil.base64Encode(cdl.ContentDocument.LatestPublishedVersion.VersionData);
+            }
+        } else {
+            cdl = [
+                    SELECT
+                            LinkedEntityId,
+                            ContentDocument.LatestPublishedVersion.Title,
+                            ContentDocument.LatestPublishedVersion.VersionData
+                    FROM    ContentDocumentLink
+                    WHERE   ContentDocumentId = :documentId
+                    LIMIT   1
+            ];
+            this.fileName = [SELECT Id, Title__c FROM Resource__c WHERE Id = :cdl.LinkedEntityId].Title__c;
         }
+        this.pdfBlobDataInBase64StringFormat = EncodingUtil.base64Encode(cdl.ContentDocument.LatestPublishedVersion.VersionData);
+        this.executeJS = true;
     }
 }
