PEH-824, some refactor

--- a/force-app/main/default/classes/CommunityService.cls
+++ b/force-app/main/default/classes/CommunityService.cls
@@ -7,7 +7,6 @@ public without sharing class CommunityService {
     public static final Id COMMUNITY_USER_PROFILE_ID = [SELECT Id FROM Profile WHERE Name = :COMMUNITY_USER_PROFILE_NAME].Id;
     public static final String SPNL_USER_PROFILE_NAME = 'IQVIA SPNL';
     public static final Id SPNL_USER_PROFILE_ID = [SELECT Id FROM Profile WHERE Name =: SPNL_USER_PROFILE_NAME].Id;
-    public static final String COMMUNITY_PROFILE_NAME = 'IQVIA Customer Community Plus Login User';
     public static final Id SPNL_ROLE = [SELECT Id FROM UserRole WHERE Name='SPNL'].Id;
 
     public static String COMMUNITY_PARTICIPANT_ACCOUNT_NAME = 'Participant';
@@ -289,7 +288,7 @@ public without sharing class CommunityService {
         return ![SELECT Id
                     FROM User
                     WHERE ContactId =: contactId
-                        AND Profile.Name =: COMMUNITY_PROFILE_NAME
+                        AND Profile.Name =: COMMUNITY_USER_PROFILE_NAME
         ].isEmpty();
     }
 
