--- a/force-app/main/tests/classes/Test_ManualTaskFilter.cls
+++ b/force-app/main/tests/classes/Test_ManualTaskFilter.cls
@@ -20,20 +20,20 @@ public class Test_ManualTaskFilter {
         testIds.add('0011F00000PfTijQAF');
     
         TestData.loadTestData();
-        TestData testDataInstance = new TestData();
 
         Test.startTest();
         
         ManualTaskFilter manualTaskFilter = new ManualTaskFilter();
-        String filterFieldJoin = manualTaskFilter.fieldJoin('Account', testIds);
-        System.assertEquals(FIELD_JOIN_EXPECTED, filterFieldJoin);
+        System.assertEquals(FIELD_JOIN_EXPECTED, DatabaseService.fieldInValues('Account', testIds));
 
-        manualTaskFilter.countries.add(new LookupSearchResult('US', 'Participant_Status__c', 'icon', 'title', 'subtitle'));
+        manualTaskFilter.countries.add(new LookupSearchResult(
+                'US', 'Participant_Status__c', 'icon', 'title', 'subtitle')
+        );
     
         manualTaskFilter.statuses.add('Enrolled');
         manualTaskFilter.statuses.add('Referred');
         
-        manualTaskFilter.getUsers();
+        manualTaskFilter.getContactsWithPE();
         
         manualTaskFilter.filterTherapeutic();
         manualTaskFilter.getCountryCode();
